RESULTS/AutoSpec/raw_results/out-4o-oopsla/036_0009/036_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/036_0009/036_merged.c:33:5: error: unterminated comment
   33 |     /*@;
      |     ^
